[gd_scene load_steps=9 format=3 uid="uid://b6viu12773d5g"]

[ext_resource type="PackedScene" uid="uid://dd4s3sh2lq2x1" path="res://scenes/crafting/crafting.tscn" id="1_y5ktt"]
[ext_resource type="PackedScene" uid="uid://cnejsm8l3onew" path="res://scenes/fighting/fighting.tscn" id="2_2b1rs"]
[ext_resource type="Script" path="res://scenes/menu_in_game.gd" id="3_txahu"]
[ext_resource type="Texture2D" uid="uid://cls30yg45jurd" path="res://assets/crafter.png" id="4_nhsii"]
[ext_resource type="Texture2D" uid="uid://cq5bb75vmd3i6" path="res://assets/pipe.png" id="5_pfil0"]
[ext_resource type="Texture2D" uid="uid://caxosndx6vvgh" path="res://assets/trash_can.png" id="6_mwkr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3g0ge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vt3un"]

[node name="Main" type="Node2D"]

[node name="Crafting" parent="." instance=ExtResource("1_y5ktt")]

[node name="Fighting" parent="." instance=ExtResource("2_2b1rs")]
position = Vector2(3, -3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_txahu")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 50

[node name="DefaultButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Select Mode"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
text = "Select"

[node name="CrafterButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Crafter"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 150
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("4_nhsii")

[node name="PipeButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Pipe"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_vt3un")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("5_pfil0")

[node name="TrashButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Trash Bin"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_vt3un")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("6_mwkr6")

[node name="DeleteButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Remove Machine"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
text = "X"

[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/DefaultButton" to="CanvasLayer/MarginContainer" method="_on_default_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/DefaultButton" to="CanvasLayer/MarginContainer" method="_on_default_button_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/CrafterButton" to="CanvasLayer/MarginContainer" method="_on_crafter_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/CrafterButton" to="CanvasLayer/MarginContainer" method="_on_crafter_button_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/PipeButton" to="CanvasLayer/MarginContainer" method="_on_pipe_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/PipeButton" to="CanvasLayer/MarginContainer" method="_on_pipe_button_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/TrashButton" to="CanvasLayer/MarginContainer" method="_on_trash_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/TrashButton" to="CanvasLayer/MarginContainer" method="_on_trash_button_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/MarginContainer/VBoxContainer/DeleteButton" to="CanvasLayer/MarginContainer" method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MarginContainer/VBoxContainer/DeleteButton" to="CanvasLayer/MarginContainer" method="_on_delete_button_mouse_exited"]
